--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body{
     box-sizing: border-box;
     padding: 0 15px;
+    font-size: 18px;
 }
 h1{
     text-align: center;
 }
 ul{
     font-size: 25px;
-
+    margin: 10px;
 }
 li{
     list-style: none;
@@ -15,4 +16,10 @@ li{
 a{
     text-decoration: none;
     color: red;
+}
+h3{
+    margin: 0 40px;
+    padding-bottom: 0;
+    font-size: 30px;
+    color: blue;
 }
